# TicTacToe

./: CMakeLists.txt  README.md  ignore.gitignore
.github/workflows/: ci.yml
gui/: resources.qrc
gui/headers/: GameController.h  GameDatabase.h  ReplayWindow.h  gamehistorywindow.h  gamepage.h  mainwindow.h  secondplayerdialog.h  signupdialog.h
gui/src/: GameController.cpp  GameDatabase.cpp  gamehistorywindow.cpp  gamepage.cpp  mainwindow.cpp  replaywindow.cpp  secondplayerdialog.cpp  signupdialog.cpp
gui/ui/: gamehistorywindow.ui  gamepage.ui  mainwindow.ui  replaywindow.ui  secondplayerdialog.ui  signupdialog.ui
src/: AI.cpp  CMakeLists.txt  Controller.cpp  Controller.h  Human.cpp  Model.cpp  Model.h  PlayerType.h  database.cpp  database.h  exceptions.cpp  exceptions.h  main.cpp
tests/: CMakeLists.txt  test_Model.cpp  test_PlayerType.cpp
